# robert

./: .gitignore  README.md  __main__.py  capture.py  cli.py  main.py
c/: fb.c
doc/: book.toml
doc/src/: chapter_1.md
python/: __main__.py  basic_signal.py  calibrate.py  camera.py  colokmeans.py  mouse.py  move.py  quantize.py  rcv.py  single_light_source.py
python/palettes/: gray_red_green.pal  gray_red_green_greens.pal  green_red_white.pal  green_red_white_grays2black.pal  jasc.py  viz_pal.py
robocom/: Cargo.toml  Robocom.toml
robocom/src/: main.rs
rust/qr/: Cargo.toml
rust/qr/src/: main.rs
