[package]
name = "robocom"
version = "0.1.0"
edition = "2021"
authors = ["Peter Segerstedt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
config = { version = "0.13.2", feature = ["toml"]}

